<resources>
    <string name="app_name">中华字典</string>
    <string name="main_et_hint">请输入查询汉字...</string>
    <string name="chengyu_et_hint">请输入查询成语...</string>
    <string name="chengyu_tv_history">历史记录</string>
    <string name="chengyu_tv_info">成语详情</string>
    <string name="main_tv_pinyin">拼音查询</string>
    <string name="main_tv_bushou">部首查询</string>
    <string name="main_tv_chengyu">成语查询</string>
    <string name="main_tv_tuwen">图文识别</string>
    <string name="main_tv_yiju">每日一句</string>
    <string name="wordinfo_tv_title">基本解释</string>
    <string name="wordinfo_tv_basic_explain">详细解释</string>
    <string name="wordinfo_tv_detailed">文字详情</string>
    <string name="setting">设置</string>
    <string name="setting_collect">收藏</string>
    <string name="setting_feedback">反馈</string>
    <string name="setting_share">分享</string>
    <string name="setting_good">好评</string>
    <string name="setting_about">关于我们</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>