<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/grey_F3F3F3"
    tools:context=".SettingActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white">

        <ImageView
            android:id="@+id/setting_iv_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:onClick="onClick"
            android:src="@mipmap/icon_back"
            tools:ignore="OnClick" />

        <TextView
            android:id="@+id/setting_tv_title"
            style="@style/titleTv"
            android:text="@string/setting"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/setting_tv_collect"
        style="@style/settingTvStyle"
        android:layout_marginTop="20dp"
        android:text="@string/setting_collect"
        android:onClick="onClick"
        />
    <View
        style="@style/settingLineStyle"/>
    <TextView
        android:id="@+id/setting_tv_feedback"
        style="@style/settingTvStyle"
        android:text="@string/setting_feedback"
        android:onClick="onClick"/>

    <View
        style="@style/settingLineStyle"/>
    <TextView
        android:id="@+id/setting_tv_good"
        style="@style/settingTvStyle"
        android:text="@string/setting_good"
        android:onClick="onClick"
        />
    <View
        style="@style/settingLineStyle"/>
    <TextView
        android:id="@+id/setting_tv_share"
        style="@style/settingTvStyle"
        android:text="@string/setting_share"
        android:onClick="onClick"
        />
    <View
        style="@style/settingLineStyle"/>
    <TextView
        android:id="@+id/setting_tv_about"
        style="@style/settingTvStyle"
        android:text="@string/setting_about"
        android:onClick="onClick"
        />
    <View
        style="@style/settingLineStyle"/>
</LinearLayout>