<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@color/grey_F3F3F3">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white">

        <TextView
            style="@style/titleTv"
            android:text="@string/app_name"/>

        <ImageView
            android:id="@+id/main_iv_setting"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@mipmap/icon_setting"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:onClick="onClick"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp">

        <EditText
            android:id="@+id/main_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="1"
            android:background="@drawable/main_et_bg"
            android:hint="@string/main_et_hint"/>

        <ImageView
            android:id="@+id/main_iv_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/icon_search"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:onClick="onClick"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"
        android:background="@color/white"
        android:weightSum="4">

        <TextView
            android:id="@+id/main_tv_pinyin"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center"
            android:textColor="@color/black"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:onClick="onClick"
            android:drawableTop="@mipmap/icon_pinyin"
            android:text="@string/main_tv_pinyin"/>

        <TextView
            android:id="@+id/main_tv_bushou"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center"
            android:textColor="@color/black"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:onClick="onClick"
            android:drawableTop="@mipmap/icon_bushou"
            android:text="@string/main_tv_bushou"/>

        <TextView
            android:id="@+id/main_tv_chengyu"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center"
            android:textColor="@color/black"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:onClick="onClick"
            android:drawableTop="@mipmap/icon_chengyu"
            android:text="@string/main_tv_chengyu"/>

        <TextView
            android:id="@+id/main_tv_tuwen"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:gravity="center"
            android:textColor="@color/black"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:onClick="onClick"
            android:drawableTop="@mipmap/icon_tuwen"
            android:text="@string/main_tv_tuwen"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp"
        android:padding="20dp"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:textStyle="bold"
            android:text="@string/main_tv_yiju"/>

        <TextView
            android:id="@+id/main_tv_juzi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="14dp"
            android:textStyle="bold"
            android:text="@string/main_tv_yiju"/>
    </LinearLayout>
</LinearLayout>