<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/grey_F3F3F3"
    tools:context=".SearchChengyuActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white">

        <ImageView
            android:id="@+id/search_chengyu_iv_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:onClick="onClick"
            android:src="@mipmap/icon_back"
            tools:ignore="OnClick" />

        <TextView
            android:id="@+id/search_chengyu_tv_title"
            style="@style/titleTv"
            android:text="@string/main_tv_chengyu"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="40dp">

        <EditText
            android:id="@+id/search_chengyu_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="4"
            android:background="@drawable/main_et_bg"
            android:hint="@string/chengyu_et_hint"/>

        <ImageView
            android:id="@+id/search_chengyu_iv_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/icon_search"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:onClick="onClick"/>
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/chengyu_tv_history"
        android:textSize="20dp"
        android:textColor="@color/black"/>

    <GridView
        android:id="@+id/search_chengyu_gv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:numColumns="4"
        android:verticalSpacing="3dp"
        android:horizontalSpacing="3dp"/>
</LinearLayout>